# Tessera

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml
crates/tessera-api/: Cargo.toml
crates/tessera-api/src/: main.rs
crates/tessera-bench/: Cargo.toml
crates/tessera-bench/src/: main.rs
crates/tessera-core/: Cargo.toml
crates/tessera-core/src/: block.rs  engine.rs  ids.rs  lib.rs  metrics.rs  runtime.rs  sequence.rs
crates/tessera-core/src/scheduler/: fcfs.rs  mod.rs  priority.rs
crates/tessera-core/tests/: allocator_props.rs  engine_sim.rs  preemption_sim.rs  prefix_sim.rs
crates/tessera-runtime-mock/: Cargo.toml
crates/tessera-runtime-mock/src/: lib.rs
crates/tessera-runtime-real/: Cargo.toml
crates/tessera-runtime-real/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
